force-app/main/default/objects/Headcount_and_Finance_RGC__c/Headcount_and_Finance_RGC__c.object-meta.xml
<CustomObject>
    <label>Headcount and Finance RGC</label>
    <nameField>
        <displayFormat>RGC-{00}</displayFormat>
        <label>Headcount and Finance RGC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Headcount and Finances RGC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>