force-app/main/default/objects/Headcount_and_Finance_RGC__c/fields/Budgeted_Head_Count__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Head_Count__c</fullName>
    <label>Budgeted Head Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>