force-app/main/default/objects/Headcount_and_Finance_RGC__c/fields/Current_Head_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Head_Count__c</fullName>
    <label>Current Head Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>