force-app/main/default/objects/Headcount_and_Finance_RGC__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0288-Research Mgmt &amp; Operations</fullName>
            </value>
            <value>
                <fullName>0400-Sequencing &amp; Lab Operations</fullName>
            </value>
            <value>
                <fullName>0410-Genome Informatics &amp; Data Engineering</fullName>
            </value>
            <value>
                <fullName>0420-Analytical Genetics</fullName>
            </value>
            <value>
                <fullName>0430-Therapeutic Area Genetics</fullName>
            </value>
            <value>
                <fullName>0440-RGC Biology</fullName>
            </value>
            <value>
                <fullName>0450-Clinical Informatics</fullName>
            </value>
            <value>
                <fullName>0490-RGC Management</fullName>
            </value>
            <value>
                <fullName>0495-RGC Research, Business &amp; Operations Mgmt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>