force-app/main/default/objects/Headcount_and_Finance_RGC__c/fields/Headcount_Date__c.field-meta.xml
<CustomField>
    <fullName>Headcount_Date__c</fullName>
    <label>Headcount Date</label>
    <type>Date</type>
</CustomField>