force-app/main/default/objects/Headcount_and_Finance_RGC__c/fields/Hired__c.field-meta.xml
<CustomField>
    <fullName>Hired__c</fullName>
    <formula>Total_Employed__c / Budgeted_Head_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Hired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>