force-app/main/default/objects/Headcount_and_Finance_RGC__c/fields/Open_Head_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Head_Count__c</fullName>
    <formula>Budgeted_Head_Count__c - Current_Head_Count__c - In_Recruitment__c - Pending_Starts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Head Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>