force-app/main/default/objects/Headcount_and_Finance_RGC__c/fields/Replacement_Positions__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Positions__c</fullName>
    <label>Replacement Positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>