force-app/main/default/objects/Headcount_and_Finance_RGC__c/fields/Unfilled__c.field-meta.xml
<CustomField>
    <fullName>Unfilled__c</fullName>
    <formula>Unfilled_HC__c / Budgeted_Head_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Unfilled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>