force-app/main/default/objects/Headcount_and_Finance_RGC__c/fields/Unfilled_HC__c.field-meta.xml
<CustomField>
    <fullName>Unfilled_HC__c</fullName>
    <formula>Budgeted_Head_Count__c -  Total_Employed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unfilled HC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>