force-app/main/default/objects/Headcount_and_Finance_RGC__c/fields/X2021_Recruitment__c.field-meta.xml
<CustomField>
    <fullName>X2021_Recruitment__c</fullName>
    <label>2021 Recruitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>